Again trying to fix white space on scroll

--- a/src/Styles/NewPost.css
+++ b/src/Styles/NewPost.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     height: 100%;
     margin: auto;
-    max-height: 90vh;
+    max-height: calc(100% - 26px);
     max-width: 600px;
     overflow-y: auto;
     padding: 20px;
